# w4a

./: .gitignore  Adjudicate.bat  README.md  SimulationInterface.html  adjudicate.py  pyproject.toml  quick_start.py  requirements.txt  setup.bat  setup.sh
SimpleAgent/: pyproject.toml
SimpleAgent/SimpleAgent/: __init__.py  simple_agent.py
SimpleAgent/tests/: test_module.py
SimpleAgent2/: README.md  pyproject.toml  requirements.txt
SimpleAgent2/SimpleAgent2/: __init__.py  simple_agent2.py
SimpleAgent2/tests/: test_module.py
SimulationInterface/: MANIFEST.in  Readme.md  pyproject.toml
SimulationInterface/SimulationInterface/: SimulationInterface.html  __init__.py
docs/: ACTION_SPACE.md  OBSERVATION_SPACE.md  REWARDS.md
src/w4a/: __init__.py  config.py  constants.py  force_design_env.py  replay.py  trident_island_env.py
src/w4a/agents/: __init__.py  _simulation_agent.py  competition_agent.py  simple_agent.py
src/w4a/entities/: NeutralFlag.json  __init__.py
src/w4a/entity_lists/: DynastyEntityList.json  LegacyEntityList.json
src/w4a/envs/: __init__.py  actions.py  constants.py  force_design_env.py  mission_metrics.py  utils.py  (+6 more)
tests/: test_action_masking.py  test_actions.py  test_agent_api.py  test_agent_spaces.py  test_basic.py  test_basic_multiagent.py  test_comprehensive.py  test_environment_mechanics.py  test_import.py  test_lifecycle.py  test_pettingzoo_interface.py  test_rewards.py  test_rl_action_masking.py  test_rl_comprehensive.py  test_rl_lifecycle.py  test_rl_rewards.py  test_rl_spaces.py  test_simulation_validation.py  test_spaces.py
(+67 files in other folders)
