[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleAgent"
version = "0.1.0"
description = "A short description of the library"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["SimpleAgent"]