[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SimulationInterface"  # Updated project name
version = "0.1.0"
description = "A Python library providing a simulation interface"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = "MIT"
requires-python = ">=3.9"  # Matches cp39 in the .pyd file
dependencies = []

[tool.setuptools]
packages = ["SimulationInterface"]  # Updated package name